Updated calendar imports for localization.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -31,7 +31,7 @@
     <link href="libs/fullcalendar/fullcalendar.css" rel='stylesheet' />
     <script src="libs/fullcalendar/fullcalendar.min.js"></script>
     <script src="libs/fullcalendar/gcal.min.js"></script>
-    <script src="libs/fullcalendar/locale-all.min.js"></script>
+    <script src="libs/fullcalendar/locale/sr.js"></script>
     
     <!-- https://angular-ui.github.io/bootstrap/ -->
     <style>
