--- a/src/main/resources/static/pages/guest/homePage/homePage.html
+++ b/src/main/resources/static/pages/guest/homePage/homePage.html
@@ -5,9 +5,12 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-              <li class="active"><a href="#"><span class="glyphicon glyphicon-home"></span>Restorani</a></li>
+              <li class="active"><a href="#/guest/restaurants-page"><span class="glyphicon glyphicon-home"></span>Restorani</a></li>
               <li class="active"><a href="#/guest/friends-page"><span class="glyphicon glyphicon-list-alt"></span>Prijatelji</a></li>
               <li class="active"><a href="#/guest/profile-page"><span class="glyphicon glyphicon-list-alt"></span>Moj nalog</a></li>
+          </ul>
+           <ul class="nav navbar-nav navbar-right">
+            <button ng-click="logoff()"> Log out </button>
           </ul>
       </div>
       <!-- /.navbar-collapse -->
@@ -15,20 +18,7 @@
 <div>
 
 <div>
-    <div>
-        <h4>Moje posete</h4>
-        <div id="custom-search-input" style="float:right">
-                            <div class="input-group col-md-2">
-                                <input type="text" class=" search-query form-control" placeholder="Search" />
-                                <span class="input-group-btn">
-                                    <button class="btn btn-danger" type="button">
-                                        <span class=" glyphicon glyphicon-search"></span>
-                                    </button>
-                                </span>
-                            </div>
-        </div>
-    </div>
-
+    <h4>Moje posete</h4>
     <table border="1">
         <tr>
             <th>Restoran</th>
@@ -44,5 +34,77 @@
         </tr>
     </table>
 
+
+    <hr>
+
+    <div id="custom-search-input" style="display:inline-block">
+                            <div class="input-group col-md-2">
+                                <input type="text" ng-model="search.$" class=" search-query form-control" placeholder="Bilo šta" />
+                                <span class="input-group-btn">
+                                    <button class="btn btn-danger" type="button">
+                                        <span class=" glyphicon glyphicon-search"></span>
+                                    </button>
+                                </span>
+                            </div>
+    </div>
+    
+    <div id="custom-search-input" style="display:inline-block">
+                            <div class="input-group col-md-2">
+                                <input type="text" ng-model="search.restaurantName" class=" search-query form-control" placeholder="Samo naziv restorana" />
+                                <span class="input-group-btn">
+                                    <button class="btn btn-danger" type="button">
+                                        <span class=" glyphicon glyphicon-search"></span>
+                                    </button>
+                                </span>
+                            </div>
+    </div>
+
+    <div id="custom-search-input" style="display:inline-block">
+                            <div class="input-group col-md-2">
+                                <input type="text" ng-model="search.date" class=" search-query form-control" placeholder="Samo datum" />
+                                <span class="input-group-btn">
+                                    <button class="btn btn-danger" type="button">
+                                        <span class=" glyphicon glyphicon-search"></span>
+                                    </button>
+                                </span>
+                            </div>
+    </div>
+
+    <div id="custom-search-input" style="display:inline-block">
+                            <div class="input-group col-md-2">
+                                <input type="text" ng-model="search.rating" class=" search-query form-control" placeholder="Samo rejting" />
+                                <span class="input-group-btn">
+                                    <button class="btn btn-danger" type="button">
+                                        <span class=" glyphicon glyphicon-search"></span>
+                                    </button>
+                                </span>
+                            </div>
+    </div>
+
+    <div id="custom-search-input" style="display:inline-block">
+                            <div class="input-group col-md-2">
+                                <input type="text" ng-model="search.friends" class=" search-query form-control" placeholder="Samo prijatelji" />
+                                <span class="input-group-btn">
+                                    <button class="btn btn-danger" type="button">
+                                        <span class=" glyphicon glyphicon-search"></span>
+                                    </button>
+                                </span>
+                            </div>
+    </div>
+
+    <table id="searchObjResults" border="1">
+    <tr>
+            <th>Restoran</th>
+            <th>Datum</th>
+            <th>Rejting</th>
+            <th>Prijatelji</th>
+    </tr>
+    <tr ng-repeat="hpObj in homePage | filter:search">
+        <td>{{ hpObj.restaurantName }}</td>
+        <td>{{ hpObj.date }}</td>
+        <td>{{ hpObj.rating }}</td>
+        <td>{{ hpObj.friends }}</td>  
+    </tr>
+    </table>
     
 </div>
