--- a/src/main/resources/static/pages/guest/restaurantsPage/restaurantsPage.html
+++ b/src/main/resources/static/pages/guest/restaurantsPage/restaurantsPage.html
@@ -20,12 +20,22 @@
 <div>
     <table border="1">
         <tr>
-            <th>Ime i prezime</th>
-            <th>Poseta</th>
+            <th>Ime restorana</th>
+            <th>Udaljenost</th>
+            <th>Rejting</th>
+            <th>Prijatelji</th>
+            <th>Rezervacija</th>
         </tr>
-        <tr ng-repeat="friend in friendsPage">
-            <td>{{ friend.nameAndSurname }}</td>
-            <td>{{ friend.numberOfVisits }}</td>
+        <tr ng-repeat="restaurant in restaurantsPage">
+            <td>{{ restaurant.name }}</td>
+            <td>{{ restaurant.distance }}</td>
+            <td>{{ restaurant.rating }}</td>
+            <td>{{ restaurant.friends }}</td>
+            <td>
+                <button ng-click="reserve({{restaurant.id}})">
+                    Rezerviši
+                </button>
+            </td>
         </tr>
     </table>
 
@@ -45,7 +55,7 @@
     
     <div id="custom-search-input" style="display:inline-block">
                             <div class="input-group col-md-2">
-                                <input type="text" ng-model="search.nameAndSurname" class=" search-query form-control" placeholder="Samo ime i prezime" />
+                                <input type="text" ng-model="search.name" class=" search-query form-control" placeholder="Samo ime" />
                                 <span class="input-group-btn">
                                     <button class="btn btn-danger" type="button">
                                         <span class=" glyphicon glyphicon-search"></span>
@@ -56,7 +66,29 @@
 
     <div id="custom-search-input" style="display:inline-block">
                             <div class="input-group col-md-2">
-                                <input type="text" ng-model="search.numberOfVisits" class=" search-query form-control" placeholder="Samo broj poseta" />
+                                <input type="text" ng-model="search.distance" class=" search-query form-control" placeholder="Samo udaljenost" />
+                                <span class="input-group-btn">
+                                    <button class="btn btn-danger" type="button">
+                                        <span class=" glyphicon glyphicon-search"></span>
+                                    </button>
+                                </span>
+                            </div>
+    </div>
+
+    <div id="custom-search-input" style="display:inline-block">
+                            <div class="input-group col-md-2">
+                                <input type="text" ng-model="search.rating" class=" search-query form-control" placeholder="Samo rejting" />
+                                <span class="input-group-btn">
+                                    <button class="btn btn-danger" type="button">
+                                        <span class=" glyphicon glyphicon-search"></span>
+                                    </button>
+                                </span>
+                            </div>
+    </div>
+
+    <div id="custom-search-input" style="display:inline-block">
+                            <div class="input-group col-md-2">
+                                <input type="text" ng-model="search.friendsRating" class=" search-query form-control" placeholder="Samo prijatelji" />
                                 <span class="input-group-btn">
                                     <button class="btn btn-danger" type="button">
                                         <span class=" glyphicon glyphicon-search"></span>
@@ -67,12 +99,16 @@
  
     <table id="searchObjResults" border="1">
     <tr>
-            <th>Ime i prezime</th>
-            <th>Poseta</th>
+            <th>Ime restorana</th>
+            <th>Udaljenost</th>
+            <th>Rejting</th>
+            <th>Prijatelji</th>
     </tr>
-    <tr ng-repeat="friendObj in friendsPage | filter:search">
-        <td>{{ friendObj.nameAndSurname }}</td>
-        <td>{{ friendObj.numberOfVisits }}</td>
+    <tr ng-repeat="restaurantObj in restaurantsPage | filter:search">
+            <td>{{ restaurant.name }}</td>
+            <td>{{ restaurant.distance }}</td>
+            <td>{{ restaurant.rating }}</td>
+            <td>{{ restaurant.friendsRating }}</td>
     </tr>
     </table>
 
