--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -23,6 +23,7 @@
     <script src="libs/angular-animate.js"></script>
     <script src="libs/angular-touch.js"></script>
     <script src="libs/ng-google-signin.js"></script>
+    <script src="libs/ngFacebook.js"></script>
     <!-- UI Bootstrap - AngularJS -->
     <script src="libs/ui-bootstrap-tpls-2.5.0.min.js"></script>
     
