--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -89,6 +89,7 @@
     <script src="pages/guest/homePage/homePageController.js"></script>
     <script src="pages/guest/friendsPage/friendsPageController.js"></script>
     <script src="pages/guest/restaurantsPage/restaurantsPageController.js"></script>
+    <script src="pages/guest/reservePage/reserve1PageController.js"></script>
    
 
     <!-- System manager -->
