--- a/src/main/resources/static/pages/guest/restaurantsPage/restaurantsPage.html
+++ b/src/main/resources/static/pages/guest/restaurantsPage/restaurantsPage.html
@@ -32,7 +32,7 @@
             <td>{{ restaurant.rating }}</td>
             <td>{{ restaurant.friends }}</td>
             <td>
-                <button ng-click="reserve({{restaurant.id}})">
+                <button >
                     Rezerviši
                 </button>
             </td>
