Biddings and Groceries update.

--- a/src/main/resources/static/pages/manager/groceries.html
+++ b/src/main/resources/static/pages/manager/groceries.html
@@ -53,7 +53,7 @@
 							<th>Merna jedinica</th>
 							<th></th>
 						</tr>
-						<tr>
+						<tr ng-repeat="li in listItems">
 							<td>{{$index+1}}</td>
 							<td>{{li.name}}</td>
 							<td>{{li.quantity}}</td>
