Added bidderService for passing objects. Bidder service impl.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -118,6 +118,7 @@
     <script src="pages/bidder/overviewBidding.js"></script>
     <script src="pages/bidder/newBidding.js"></script>
     <script src="pages/bidder/biddings.js"></script>
+    <script src="pages/bidder/bidderService.js"></script>
     
     <!-- Bartender -->
     <script src="pages/bartender/profile.js"></script>
