--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -10,11 +10,12 @@
     <!--Bootstrap CSS-->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/bootstrap-theme.min.css" rel="stylesheet">
+    <link href="css/bootstrap-datepicker3.standalone.css" rel="stylesheet">
     <link href="css/angular-notify.min.css" rel="stylesheet">
     
     <script src="libs/bootstrap.min.js"></script>
     <script src="libs/validator.min.js"></script>
-
+    <script src="libs/bootstrap-datepicker.js"></script>
     <!--Angular-->
     <script src="libs/angular.min.js"></script>
     <script src="libs/angular-route.js"></script>
