--- a/src/main/resources/static/pages/waiter/restaurantRegion.html
+++ b/src/main/resources/static/pages/waiter/restaurantRegion.html
@@ -15,10 +15,11 @@
 					<th>Naziv segmenta</th>
 					<th>Boja segmenta</th>
 				</tr>  
+				<!--  OBRISI OVOOOOOOOOOO
 				<tr ng-repeat="area in areas">
 					<td>{{area.name}}</td>
 					<td style="background: {{area.color}};"></td>
-				</tr>
+				</tr>  -->
 			</table>
 		
 			
