Bidding and groceries work in progress.

--- a/src/main/resources/static/pages/bidder/profile.html
+++ b/src/main/resources/static/pages/bidder/profile.html
@@ -35,9 +35,9 @@
     <div class="collapse navbar-collapse" ng-controller="bidderProfileController">
 	    <ul class="nav navbar-nav">
 	        <li id="li1" class="active"><a ng-click="home()">Početna</a></li>
-	        <li id="li2"><a ng-click="newBidding()">Nova ponuda</a></li>
-	        <li id="li3"><a ng-click="overview()">Pregled ponuda</a></li>
-	        <li id="li4"><a ng-click="biddings()">Sve ponude</a></li>
+	        <!-- <li id="li2"><a ng-click="newBidding()">Nova ponuda</a></li> -->
+	        <li id="li4"><a ng-click="biddings()">Potražnja restorana</a></li>
+	        <li id="li3"><a ng-click="overview()">Pregled mojih ponuda</a></li>
 	    </ul>
 	    <button type="button" class="btn btn-warning navbar-btn pull-right" ng-click="logout()">Odjavi me</button>
 	</div>
