--- a/src/main/resources/static/pages/manager/groceries.html
+++ b/src/main/resources/static/pages/manager/groceries.html
@@ -132,7 +132,7 @@
 			      <div class="modal-body">
 					
 					<div class="thumbnail">
-					<h4 class="text-center">Informacije o ponudi</h4>
+					<h4 class="text-center">Informacije o potražnji</h4>
 					<p><b>Naziv restorana: </b> {{restaurant.name}}</p>
 					<div class="form-group">
 						<label for="groceriesFromDate">Važi od:</label>
