Waiter's day shift restaurant region tables.

--- a/src/main/resources/static/pages/waiter/restaurantRegion.html
+++ b/src/main/resources/static/pages/waiter/restaurantRegion.html
@@ -15,11 +15,10 @@
 					<th>Naziv segmenta</th>
 					<th>Boja segmenta</th>
 				</tr>  
-				<!--  OBRISI OVOOOOOOOOOO
-				<tr ng-repeat="area in areas">
-					<td>{{area.name}}</td>
-					<td style="background: {{area.color}};"></td>
-				</tr>  -->
+				<tr ng-repeat="table in tables">
+					<td>{{table.area.name}}</td>
+					<td style="background: {{table.area.color}};"></td>
+				</tr>  
 			</table>
 		
 			
