--- a/src/main/resources/static/pages/bidder/newBidding.html
+++ b/src/main/resources/static/pages/bidder/newBidding.html
@@ -1,4 +1,5 @@
 <div class="container-fluid">
+	<h3 id="newBiddingTitle">Unos ponude</h3>
 	<div class="row">
 		<div class="col-md-6 col-lg-6 form">
 			
