--- a/src/main/resources/static/pages/bidder/overviewBidding.html
+++ b/src/main/resources/static/pages/bidder/overviewBidding.html
@@ -64,8 +64,8 @@
 									<td>{{$index+1}}</td>
 									<td>{{li.name}}</td>
 									<td>{{li.quantity}}</td>
-									<td>{{li.groceriesItemType.name}}</td>
-									<td>{{li.groceriesItemQty.name}}</td>
+									<td>{{li.groceryItemType.name}}</td>
+									<td>{{li.groceryItemQty.name}}</td>
 								</tr>
 							</table>
 							
@@ -79,7 +79,6 @@
 									<th></th>						
 									<th>Naziv stavke</th>
 					                <th>Količina</th>
-					                <th>Tip</th>
 					                <th>Merna jedinica</th>
 					                <th>Cena</th>
 								</tr>
@@ -87,8 +86,7 @@
 									<td>{{$index+1}}</td>
 									<td>{{bi.name}}</td>
 									<td>{{bi.quantity}}</td>
-									<td>{{bi.groceriesItemType.name}}</td>
-									<td>{{bi.groceriesItemQty.name}}</td>
+									<td>{{bi.groceryItemQty.name}}</td>
 			              			<td>{{bi.price}}</td>
 								</tr>
 							</table>
