Waiter work schedule.

--- a/src/main/resources/static/pages/waiter/workSchedule.html
+++ b/src/main/resources/static/pages/waiter/workSchedule.html
@@ -1,3 +1,16 @@
-<h1>WAITER: Work Schedule</h1>
+<div class="container-fluid">
+	
+	
+	
+		
+			<div class="col-md-6 col-lg-6 form">
+				<h4>Raspored smena</h4>
+				<div id="timetable">
+				</div>
+			</div>
+		
+	
+	
+</div>
 
-<img src="img/schedule.jpg" class="img-rounded" alt="Muko moja" width="200" height="200">
+
