--- a/src/main/resources/static/pages/manager/report.html
+++ b/src/main/resources/static/pages/manager/report.html
@@ -1,4 +1,10 @@
 <div class="container-fluid">
 	<div class="row">
+		<div class="col-md-8 col-lg-8 form">
+			<canvas id="report"></canvas>
+		</div>
+		
+		<div class="col-md-4 col-lg-4 form">
+		</div>
 	</div>
 </div>
