Chef work schedule.

--- a/src/main/resources/static/pages/chef/workSchedule.html
+++ b/src/main/resources/static/pages/chef/workSchedule.html
@@ -1,3 +1,14 @@
-<h1>CHEF: Work Schedule</h1>
-
-<img src="img/schedule.jpg" class="img-rounded" alt="Muko moja" width="200" height="200">
+<div class="container-fluid">
+	
+	
+	
+		
+			<div class="col-md-6 col-lg-6 form">
+				<h4>Raspored smena {{user.name}}</h4>
+				<div id="timetable">
+				</div>
+			</div>
+		
+	
+	
+</div>
