Bartender work schedule.

--- a/src/main/resources/static/pages/chef/workSchedule.html
+++ b/src/main/resources/static/pages/chef/workSchedule.html
@@ -4,7 +4,7 @@
 	
 		
 			<div class="col-md-6 col-lg-6 form">
-				<h4>Raspored smena {{user.name}}</h4>
+				<h4>Raspored smena</h4>
 				<div id="timetable">
 				</div>
 			</div>
