--- a/src/main/resources/static/pages/bartender/profile.html
+++ b/src/main/resources/static/pages/bartender/profile.html
@@ -1,19 +1,4 @@
-<!--  <div>
-
-    <div class="collapse navbar-collapse" ng-controller="bartenderProfileController">
-	    <ul class="nav navbar-nav">
-	        <li><a ng-class="{ active: activePageNumber == 0}" ng-click="home()">My Profile</a></li>
-	        <li><a ng-class="{ active: activePageNumber == 1}" ng-click="seeWorkSchedule()">My Work Schedule</a></li>
-	    	<li><a ng-class="{ active: activePageNumber == 2}" ng-click="seeOrders()">Orders 4 Me</a></li>
-	    </ul>
-	</div>
-
-    <div>
-        <ui-view></ui-view>
-    </div>
-</div>
--->
-
+<!--  
 <div>
 	<div ng-controller="bartenderProfileController">
 	
@@ -38,4 +23,23 @@
 	</uib-tabset>
 	
 	</div>
-</div>
+</div> -->
+
+<nav class="navbar navbar-default">
+	<div class="container-fluid">
+	
+    <div class="collapse navbar-collapse" ng-controller="bartenderProfileController">
+	    <ul class="nav navbar-nav">
+	    	<li id="li1" class="active"><a ng-class="{ active: activePageNumber == 0}" ng-click="home()">Početna</a></li>
+	     	<li id="li2"><a ng-class="{ active: activePageNumber == 1}" ng-click="seeWorkSchedule()">Radni kalendar</a></li>
+	        <li id="li4"><a ng-class="{ active: activePageNumber == 2}" ng-click="seeOrders()">Porudžbine</a></li>
+	    </ul>
+	    <button type="button" class="btn btn-warning navbar-btn pull-right" ng-click="logout()">Odjavi me</button>
+	</div>
+
+    <div>
+        <ui-view></ui-view>
+    </div>
+    
+    </div>
+</nav>
