Dodat favicon i izmenjen naziv prikaza.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,8 +2,11 @@
 <html lang="en" ng-app="foodbook">
 <head>
     <meta charset="UTF-8">
-    <title>FoodBook</title>
-
+    <title>Reservation4Me</title>
+	
+	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="img/favicon.ico" type="image/x-icon">
+	
     <!--jQuery -->
     <script src="libs/jquery.min.js"></script>
 
