--- a/src/main/resources/static/pages/manager/report.html
+++ b/src/main/resources/static/pages/manager/report.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-md-8 col-lg-8 form">
-			<canvas id="report"></canvas>
+			<canvas id="report" class="chart chart-bar" chart-data="data" chart-labels="labels" chart-series="series"></canvas>
 		</div>
 		
 		<div class="col-md-4 col-lg-4 form">
