--- a/src/main/resources/static/pages/manager/report.html
+++ b/src/main/resources/static/pages/manager/report.html
@@ -6,7 +6,7 @@
 			<h4 class="text-center" id="additionalData"></h4>
 		</div>
 		
-		<div class="col-md-4 col-lg-4 form">
+		<div class="col-md-4 col-lg-4 form thumbnail">
 			<button type="button" class="btn btn-primary" ng-click="getGrades()">OCENA</button>
 		</div>
 	</div>
