Rad na rezervaciji.

--- a/src/main/resources/static/pages/guest/restaurantsPage/restaurantsPage.html
+++ b/src/main/resources/static/pages/guest/restaurantsPage/restaurantsPage.html
@@ -1,116 +1,117 @@
 <div class="container">
-  <nav class="navbar navbar-default" role="navigation">
-      <!-- Brand and toggle get grouped for better mobile display -->
+    <nav class="navbar navbar-default" role="navigation">
+        <!-- Brand and toggle get grouped for better mobile display -->
 
-      <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-              <li class="active"><a href="#/guest/restaurants-page"><span class="glyphicon glyphicon-home"></span>Restorani</a></li>
-              <li class="active"><a href="#/guest/friends-page"><span class="glyphicon glyphicon-list-alt"></span>Prijatelji</a></li>
-              <li class="active"><a href="#/guest/profile-page"><span class="glyphicon glyphicon-list-alt"></span>Moj nalog</a></li>
-          </ul>
-           <ul class="nav navbar-nav navbar-right">
-            <button ng-click="logoff()"> Log out </button>
-          </ul>
-      </div>
-      <!-- /.navbar-collapse -->
-  </nav>
-<div>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#/guest/restaurants-page"><span class="glyphicon glyphicon-home"></span>Restorani</a></li>
+                <li class="active"><a href="#/guest/friends-page"><span class="glyphicon glyphicon-list-alt"></span>Prijatelji</a></li>
+                <li class="active"><a href="#/guest/profile-page"><span class="glyphicon glyphicon-list-alt"></span>Moj nalog</a></li>
+                <li class="active"><a href="#/guest/myReservations-page"><span class="glyphicon glyphicon-list-alt"></span>Moj rezrvacijee</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <button ng-click="logoff()"> Log out </button>
+            </ul>
+        </div>
+        <!-- /.navbar-collapse -->
+    </nav>
+    <div>
 
-<div>
-    <table border="1">
-        <tr>
-            <th>Ime restorana</th>
-            <th>Udaljenost</th>
-            <th>Rejting</th>
-            <th>Prijatelji</th>
-            <th>Rezervacija</th>
-        </tr>
-        <tr ng-repeat="restaurant in restaurantsPage">
-            <td>{{ restaurant.name }}</td>
-            <td>{{ restaurant.distance }}</td>
-            <td>{{ restaurant.rating }}</td>
-            <td>{{ restaurant.friends }}</td>
-            <td>
-                <button ng-click="reserve(restaurant.id)">
+        <div>
+            <table border="1">
+                <tr>
+                    <th>Ime restorana</th>
+                    <th>Udaljenost</th>
+                    <th>Rejting</th>
+                    <th>Prijatelji</th>
+                    <th>Rezervacija</th>
+                </tr>
+                <tr ng-repeat="restaurant in restaurantsPage">
+                    <td>{{ restaurant.name }}</td>
+                    <td>{{ restaurant.distance }}</td>
+                    <td>{{ restaurant.rating }}</td>
+                    <td>{{ restaurant.friends }}</td>
+                    <td>
+                        <button ng-click="reserve(restaurant.id)">
                     Rezerviši
                 </button>
-            </td>
-        </tr>
-    </table>
+                    </td>
+                </tr>
+            </table>
 
-    <hr>
+            <hr>
 
 
-    <div id="custom-search-input" style="display:inline-block">
-                            <div class="input-group col-md-2">
-                                <input type="text" ng-model="search.$" class=" search-query form-control" placeholder="Bilo šta" />
-                                <span class="input-group-btn">
+            <div id="custom-search-input" style="display:inline-block">
+                <div class="input-group col-md-2">
+                    <input type="text" ng-model="search.$" class=" search-query form-control" placeholder="Bilo šta" />
+                    <span class="input-group-btn">
                                     <button class="btn btn-danger" type="button">
                                         <span class=" glyphicon glyphicon-search"></span>
-                                    </button>
-                                </span>
-                            </div>
-    </div>
-    
-    <div id="custom-search-input" style="display:inline-block">
-                            <div class="input-group col-md-2">
-                                <input type="text" ng-model="search.name" class=" search-query form-control" placeholder="Samo ime" />
-                                <span class="input-group-btn">
+                    </button>
+                    </span>
+                </div>
+            </div>
+
+            <div id="custom-search-input" style="display:inline-block">
+                <div class="input-group col-md-2">
+                    <input type="text" ng-model="search.name" class=" search-query form-control" placeholder="Samo ime" />
+                    <span class="input-group-btn">
                                     <button class="btn btn-danger" type="button">
                                         <span class=" glyphicon glyphicon-search"></span>
-                                    </button>
-                                </span>
-                            </div>
-    </div>
+                    </button>
+                    </span>
+                </div>
+            </div>
 
-    <div id="custom-search-input" style="display:inline-block">
-                            <div class="input-group col-md-2">
-                                <input type="text" ng-model="search.distance" class=" search-query form-control" placeholder="Samo udaljenost" />
-                                <span class="input-group-btn">
+            <div id="custom-search-input" style="display:inline-block">
+                <div class="input-group col-md-2">
+                    <input type="text" ng-model="search.distance" class=" search-query form-control" placeholder="Samo udaljenost" />
+                    <span class="input-group-btn">
                                     <button class="btn btn-danger" type="button">
                                         <span class=" glyphicon glyphicon-search"></span>
-                                    </button>
-                                </span>
-                            </div>
-    </div>
+                    </button>
+                    </span>
+                </div>
+            </div>
 
-    <div id="custom-search-input" style="display:inline-block">
-                            <div class="input-group col-md-2">
-                                <input type="text" ng-model="search.rating" class=" search-query form-control" placeholder="Samo rejting" />
-                                <span class="input-group-btn">
+            <div id="custom-search-input" style="display:inline-block">
+                <div class="input-group col-md-2">
+                    <input type="text" ng-model="search.rating" class=" search-query form-control" placeholder="Samo rejting" />
+                    <span class="input-group-btn">
                                     <button class="btn btn-danger" type="button">
                                         <span class=" glyphicon glyphicon-search"></span>
-                                    </button>
-                                </span>
-                            </div>
-    </div>
+                    </button>
+                    </span>
+                </div>
+            </div>
 
-    <div id="custom-search-input" style="display:inline-block">
-                            <div class="input-group col-md-2">
-                                <input type="text" ng-model="search.friendsRating" class=" search-query form-control" placeholder="Samo prijatelji" />
-                                <span class="input-group-btn">
+            <div id="custom-search-input" style="display:inline-block">
+                <div class="input-group col-md-2">
+                    <input type="text" ng-model="search.friendsRating" class=" search-query form-control" placeholder="Samo prijatelji" />
+                    <span class="input-group-btn">
                                     <button class="btn btn-danger" type="button">
                                         <span class=" glyphicon glyphicon-search"></span>
-                                    </button>
-                                </span>
-                            </div>
-    </div>
- 
-    <table id="searchObjResults" border="1">
-    <tr>
-            <th>Ime restorana</th>
-            <th>Udaljenost</th>
-            <th>Rejting</th>
-            <th>Prijatelji</th>
-    </tr>
-    <tr ng-repeat="restaurantObj in restaurantsPage | filter:search">
-            <td>{{ restaurant.name }}</td>
-            <td>{{ restaurant.distance }}</td>
-            <td>{{ restaurant.rating }}</td>
-            <td>{{ restaurant.friendsRating }}</td>
-    </tr>
-    </table>
+                    </button>
+                    </span>
+                </div>
+            </div>
 
-    
-</div>
+            <table id="searchObjResults" border="1">
+                <tr>
+                    <th>Ime restorana</th>
+                    <th>Udaljenost</th>
+                    <th>Rejting</th>
+                    <th>Prijatelji</th>
+                </tr>
+                <tr ng-repeat="restaurantObj in restaurantsPage | filter:search">
+                    <td>{{ restaurant.name }}</td>
+                    <td>{{ restaurant.distance }}</td>
+                    <td>{{ restaurant.rating }}</td>
+                    <td>{{ restaurant.friendsRating }}</td>
+                </tr>
+            </table>
+
+
+        </div>
