--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -106,6 +106,7 @@
     <script src="pages/guest/reservePage/reserve2PageController.js"></script>
     <script src="pages/guest/reservePage/reserve3PageController.js"></script>
     <script src="pages/guest/myReservationsPage/myReservationsPageController.js"></script>
+    <script src="pages/guest/reservationDetails/reservationDetails.js"></script>
 
     <!-- System manager -->
     <script src="pages/sysmanager/profile.js"></script>
