Dodavanje prijatelja, izmena rezervacije, MOJE REZERVACIJE, otkazivanje rezervacije, potvrdjivanje rezervacije

--- a/src/main/resources/static/pages/guest/reservePage/reserve2Page.html
+++ b/src/main/resources/static/pages/guest/reservePage/reserve2Page.html
@@ -18,6 +18,9 @@
     </nav>
     <div>
 
+            <button class="btn btn-info" ng-click="reserve(reserve2Page.restaurantId)">
+                    Dalje >>
+            </button>
         <div>
             <strong>Restoran:</strong><span>{{reserve2Page.name}}</span>
             <strong>Datum i vreme:</strong><span>{{date}}</span>
@@ -30,9 +33,6 @@
             </div>
 
 
-            <button ng-click="reserve(reserve2Page.restaurantId)">
-                    Dalje >>
-            </button>
 
         </div>
 
