--- a/src/main/resources/static/pages/guest/reservePage/reserve3Page.html
+++ b/src/main/resources/static/pages/guest/reservePage/reserve3Page.html
@@ -93,7 +93,7 @@
 
                 </div>
 
-                <button ng-click="reserve(reserve2Page.restaurantId)">
+                <button class="btn btn-info" ng-click="reserve(reserve2Page.restaurantId)">
                     Dalje >>
             </button>
 
