--- a/src/main/resources/static/pages/guest/reservePage/reserve1Page.html
+++ b/src/main/resources/static/pages/guest/reservePage/reserve1Page.html
@@ -79,7 +79,7 @@
 
             <br>
 
-            <button class="btn btn-sm btn-info" ng-click="reserve(restaurant.id)">
+            <button class="btn btn-info" ng-click="reserve(restaurant.id)">
                     Dalje >>
             </button>
 
