Dodavanje prijatelja, izmena rezervacije, MOJE REZERVACIJE, otkazivanje rezervacije, potvrdjivanje rezervacije

--- a/src/main/resources/static/pages/guest/friendsPage/friendsPage.html
+++ b/src/main/resources/static/pages/guest/friendsPage/friendsPage.html
@@ -8,7 +8,8 @@
                 <li class="active"><a href="#/guest/restaurants-page"><span class="glyphicon glyphicon-home"></span>Restorani</a></li>
                 <li class="active"><a href="#/guest/friends-page"><span class="glyphicon glyphicon-list-alt"></span>Prijatelji</a></li>
                 <li class="active"><a href="#/guest/profile-page"><span class="glyphicon glyphicon-list-alt"></span>Moj nalog</a></li>
-                <li class="active"><a href="#/guest/myReservations-page"><span class="glyphicon glyphicon-list-alt"></span>Moj rezrvacijee</a></li>            </ul>
+                <li class="active"><a href="#/guest/myReservations-page"><span class="glyphicon glyphicon-list-alt"></span>Moj rezrvacijee</a></li>
+            </ul>
             <ul class="nav navbar-nav navbar-right">
                 <button ng-click="logoff()"> Log out </button>
             </ul>
@@ -103,10 +104,10 @@
                 </tr>
                 <tr ng-repeat="accept in acceptPeople">
                     <td>{{ accept.id }}</td>
-                    <td>{{ accept.fromId.name }}</td>
-                    <td>{{ accept.fromId.surname }}</td>
-                    <td><button ng-click="accept(accept.id)"> Prihvati </button></td>
-                    <td><button ng-click="reject(accept.id)"> Odbaci </button></td>
+                    <td>{{ accept.name }}</td>
+                    <td>{{ accept.surname }}</td>
+                    <td><button ng-click="prihvati(accept.id)"> Prihvati </button></td>
+                    <td><button ng-click="odbaci(accept.id)"> Odbaci </button></td>
                 </tr>
             </table>
 
