--- a/src/main/resources/static/pages/sysmanager/home.html
+++ b/src/main/resources/static/pages/sysmanager/home.html
@@ -22,10 +22,38 @@
         </div>
         <p><a type="submit" class="btn btn-success btn-block" ng-click="modifySysManager()">Sačuvaj</a></p>
         <p><a type="submit" class="btn btn-danger btn-block" ng-click="cancel()">Odustani</a></p>
-        
+        <p><a type="submit" class="btn btn-primary btn-block" data-toggle="modal" data-target="#myModalPass">Promeni Lozinku</a></p>
     </form>
 
 </div>
 
 </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="myModalPass" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Promena lozinke</h4>
+      </div>
+      <div class="modal-body">
+      	<form>
+          <div class="form-group">
+            <label for="pswd" class="control-label">Trenutna lozinka</label>
+            <input type="password" class="form-control" ng-model="sysmanager.oldPassword" id="pswd">
+          </div>
+          <div class="npswd">
+            <label for="message-text" class="control-label">Nova lozinka</label>
+            <input type="password" class="form-control" ng-model="sysmanager.newPassword" id="npswd" placeholder="**************">
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Zatvori</button>
+        <button type="button" class="btn btn-primary" ng-click="changePassword()">Potvrdi</button>
+      </div>
+    </div>
+  </div>
 </div>
